--- a/site/package.json
+++ b/site/package.json
@@ -13,7 +13,13 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.461.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
