--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -38,7 +38,7 @@ jobs:
         run: pnpm run build
         env:
           NEXT_PUBLIC_BUILD_TARGET: marketing
-          NEXT_PUBLIC_SITE_URL: https://algiras.github.io/chaos-protocol
+          NEXT_PUBLIC_SITE_URL: https://chaosprotocol.io
 
       - name: Add .nojekyll file
         run: touch site/out/.nojekyll
