--- a/site/package.json
+++ b/site/package.json
@@ -27,8 +27,9 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "autoprefixer": "^10.4.24",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
