--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/username/chaos-protocol.git"
+    "url": "https://github.com/Algiras/chaos-protocol.git"
   },
   "keywords": [
     "cardano",
@@ -29,7 +29,7 @@
     "smart-contracts"
   ],
   "author": "CHAOS Protocol Team",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "tsx": "^4.21.0"
   }
